# inductive-bias-probes

./: .gitignore  .mailmap  LICENSE  README.md  pyproject.toml
inductivebiasprobes/: __init__.py  paths.py
inductivebiasprobes/configs/othello/synthetic_othello/: ntp_config.yaml  state_config.yaml  transfer_balance_black_config.yaml  transfer_edges_config.yaml  transfer_majority_config.yaml  transfer_parity_config.yaml  white_noise_config.yaml
inductivebiasprobes/configs/physics/: force_magnitude_config.yaml  force_vector_config.yaml  ntp_config.yaml  white_noise_config.yaml
inductivebiasprobes/experiments/gridworld/: README.md  compute_inductive_bias.py  generate_data.py  generate_white_noise.py  plot_ib_num_states.py  train_model.py
inductivebiasprobes/experiments/othello/: README.md  compute_inductive_bias.py  compute_legal_next_moves.py  compute_transfer_metrics.py  generate_data.py  generate_white_noise.py  plot_reconstruction_metrics.py  train_model.py
inductivebiasprobes/experiments/physics/: README.md  compute_inductive_bias.py  evaluate_next_token_prediction.py  exoplanet_data.csv  fit_force_vector_oracle.py  fit_symbolic_regression.py  generate_data.py  generate_white_noise_and_oracle_predictions.py  get_llm_forces.py  plot_forces.py  plot_llm_forces.py  plot_solar_system_orbits.py  train_model.py
inductivebiasprobes/experiments/physics/llm-prompts/: 0.txt  1.txt  2.txt  3.txt  4.txt  traj_0.npy  traj_1.npy  traj_2.npy  (+17 more)
inductivebiasprobes/src/: mamba.py  model.py  nanogpt.py  orbital_mechanics.py  othello.py  plot_utils.py  train_utils.py
(+15 files in other folders)
